@@ -6,6 +6,7 @@
   * Small fix to lsl.imaging.utils.plotGriddedImage() to get the image scale correct for non-all-sky images
   * Finished moving imageIDI.py over to using the lsl.imaging modules
   * Changed the default FFT length in correlateTBN.py to 16 channels
+  * Fixed a bug in lsl.common.sdf/sdfADP that caused parseSDF() to crash on SDFs generated by MCS when beam delays/gains were specified
 
 1.2.0
   * Added a new lsl.common.adp module to help describe ADP
